# template_v1

./: CMakeLists.txt  README.md  package.xml
arduino/: platformio.ini
arduino/lib/ros_lib/template_v1/: Temp1.h
arduino/src/: pub_sub.ino
launch/: template.launch
msg/: .Temp1.msg.swp  Temp1.msg  Temp1.msg.save
scripts/: example_pub.py  example_sub.py
src/: .example_pub.cpp.swp  example_pub.cpp  example_sub.cpp
