<?xml version="1.0"?>
<package>
  <name>template_v1</name>
  <version>0.0.0</version>
  <description>The template_v1 package</description>

  <maintainer email="dicksonlee009@gmail.com">Dickson Lee</maintainer>

  <license>TODO</license>


  <author email="dicksonlee009@gmail.com">Dickson Lee</author>


  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
